--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <html>
 
 <head>
-    <title>Page Title</title>
+    <title>West-Mec IT Security </title>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
 </head>
 
 <body>
+    <h2>West-mec</h2>
 
 </body>
 
