--- a/index.html
+++ b/index.html
@@ -9,6 +9,29 @@
 </head>
 
 <body>
+    <header>
+        <img src="" alt="">
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+
+                </li>
+                <li>
+                    <a href="contact.html">Contact</a>
+                </li>
+                <li>
+                    <a href="CTSO.html">CTSO</a>
+                </li>
+                <li>
+                    <a href="instructors.html">Instructors</a>
+                </li>
+                <li>
+                    <a href="about.html">About</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <h2>West-mec</h2>
 
 </body>
