--- a/Html/index.html
+++ b/Html/index.html
@@ -6,6 +6,7 @@
     <title>West-Mec IT Security </title>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
+    <link rel="stylesheet" href="/CSS/index.css">
 </head>
 
 <body>
