--- a/instrucutors.html
+++ b/instrucutors.html
@@ -9,7 +9,28 @@
 </head>
 
 <body>
+    <header>
+        <img src="" alt="">
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
 
+                </li>
+                <li>
+                    <a href="contact.html">Contact</a>
+                </li>
+                <li>
+                    <a href="CTSO.html">CTSO</a>
+                </li>
+                <li>
+                    <a href="instructors.html">Instructors</a>
+                </li>
+                <li>
+                    <a href="about.html">About</a>
+                </li>
+            </ul>
+        </nav>
 
 </body>
 
